--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
   display: flex;
@@ -21,7 +21,7 @@ main {
   border-radius: 8px;
   overflow: hidden;
   padding: 16px;
-}
+} */
 
 button {
   border-radius: 8px;
